@@ -1,6 +1,7 @@
 2019-12-18 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_accel_label.c: Add internal gobject and widget class comments.
+      Add function documentation for geda_accel_label_get_accel_width.
 
     * src/widgets/geda_combobox.c: Add internal GedaComboBoxClass comments, convert
       container_class and widget_class comment to internal documentation.
